# ROB-project

./: CMakeLists.txt  et --hard <commit_hash>  package.xml  setup.py
config/: pid.yaml
launch/: control.launch  control_NL.launch  control_PID.launch  planner.launch  run.launch  simulation.launch
msg/: Error_msg.msg
nodes/: control.py  control_NL.py  control_PID.py  planner.py
scripts/: __init__.py  colors.py  errors.py  utils.py
src/: cprocessor.py  plotter.py
src/strategies/: __init__.py  path.py  trajectory.py
