<?xml version="1.0"?>
<package format="2">
  <name>project</name>
  <version>0.0.0</version>
  <description>Project for ROB exam</description>

  <maintainer email="a.guerriero3@studenti.unipi.it">ale</maintainer>
  <maintainer email="r.berni@studenti.unipi.it">ricca</maintainer>

  <author email="a.guerriero3@studenti.unipi.it">ale</author>
  <author email="r.berni@studenti.unipi.it">ricca</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
