<?xml version="1.0"?>
<package format="2">
  <name>project</name>
  <version>0.0.0</version>
  <description>Project for ROB exam</description>

  <maintainer email="a.guerriero3@studenti.unipi.it">ale</maintainer>
  <maintainer email="r.berni@studenti.unipi.it">ricca</maintainer>

  <author email="a.guerriero3@studenti.unipi.it">ale</author>
  <author email="r.berni@studenti.unipi.it">ricca</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pynpu-pip</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
